--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 group = 'com.alejoHomes.gradle'
-version = '0.0.2'
+version = '0.1.1'
 
 ext {
     artifactId = 'jasmine'
@@ -39,7 +39,7 @@ pluginBundle {
     website = 'https://github.com/alejoHomes/jasmine-gradle'
     vcsUrl = 'https://github.com/alejoHomes/jasmine-gradle'
     description = 'allows you to run Jasmine tests using Karma. This is a fork from craigburke plugin, adding karma-junit-reporter '
-    tags = ['jasmine', 'javascript','jquery']
+    tags = ['jasmine', 'javascript']
 
     plugins {
         jasmine {
